# bubackos

./: .dockerignore  .envrc  .gcc-flags.json  .gitignore  .gitmodules  .oclint  Dockerfile  Makefile  Makefile.common  README.markdown  architecture.markdown  bochsrc.txt  bubackos.code-workspace  bubackos.conf  build-image.sh  build.gradle  dependencies.properties  gen_js_load_all.awk  intel-x86_64.cmake  linux-usermode-mem.txt  settings.gradle  toolchain_bubackos.cmake
.gnutags/: GPATH  GRTAGS  GTAGS
build-tools/: .gitignore  Makefile
js/: console.js  index.html  start.js
kernel/: .project  CMakeLists.txt  build.gradle
kernel/src/kernel/c/algorithms/: list.c  stack.c
kernel/src/kernel/c/core/: init.c  logging.c  main.c  memory.c  memory_management.c  page_allocator.c  posix_syscalls.c  syscall.c  task_management.c  user_mode_test.c
kernel/src/kernel/c/hal/: console.c  multiboot.S  multiboot.c
kernel/src/kernel/c/hal/x86_64/: boot.S  gdt.S  gdt.c  idt.S  idt.c  idt_fill.S  intel.c  linker.ld  native_memory.c  native_task.S  page_table.c  task.S
kernel/src/kernel/c/loader/: elfparser.c
kernel/src/kernel/headers/core/: configuration.h  init.h  logging.h  syscall.h  task_management.h
kernel/src/kernel/headers/hal/: gdt.h  hal.h  idt.h  multiboot2.h  native_task.h  platform.h  tss.h
kernel/src/kernel/headers/loader/: elf.h
kernel/src/kernel/test/: kernel_test.h
kernel/src/kernel/test/core/: test_memory_management.c  test_task_management.c
kernel/src/kernel/test/hal/: test_gdt.c  test_native_memory.c
kernel/src/libk/c/: formatting.c  string.c
kernel/src/libk/c/algorithms/: linkedlist.c
kernel/src/libk/headers/algorithms/: linkedlist.h  node.h  queue.h
kernel/src/libk/test/: test_formatting.c  test_linkedlist.c
loader/: Makefile
src/: CMakeLists.txt  CMakeListsUtils.txt  intel-x86_64.cmake
src/algorithms/: bst.c  queue.c
src/algorithms/include/algorithms/: node.h
src/arch/x86_64/: boot.asm  context_switch.asm  interrupt.S  linker.ld  multiboot2_header.asm  task.S
src/core/: logging.c  main.c
src/core/include/core/: task_management.h
src/hal/: console.c  multiboot.c
src/hal/include/hal/: multiboot2.h
src/hal/x86_64/: gdt.c  idt.c
src/include/: system.h
src/include/algorithms/: bst.h  stack.h
src/include/kernel/: bubackos.h  configuration.h  console.h  gdt.h  idt.h  js_engine.h  logging.h  memory_allocator.h  multiboot2.h  page_allocator.h  platform.h  services.h  task_management.h  tss.h
src/kernel/: console.c  gdt.c  idt.c  init.c  js_engine.c  logging.c  main.c  memory_allocator.c  multiboot.c  page_allocator.c  page_allocator.cpp  posix_syscalls.c  services.c  task_management.c  terminal.c
src/kernel/core/: CMakeLists.txt
src/kernel/core/include/core/: configuration.h  elf.h  init.h  logging.h  memory.h  memory_management.h  module_loader.h  page_allocator.h  syscall.h  task_management.h  types.h  utils.h
src/kernel/core/include/core/hal/: hw_events.h  native_task.h  native_timer.h  native_vmem.h  platform.h
src/kernel/core/include/core/loader/: elf.h  module_loader.h
src/kernel/core/include/core/pmem/: services.h
src/kernel/core/include/core/scheduler/: services.h
src/kernel/core/include/core/syscall/: services.h  syscalls.h
src/kernel/core/include/core/task/: services.h
src/kernel/core/include/core/vmem/: region_services.h  services.h
src/kernel/core/src/: alloc.c  elfparser.c  hw_events.c  init.c  memory.c  memory_management.c  module_loader.c  page_allocator.c  syscall.c  task_management.c
src/kernel/core/src/loader/: elfparser.c  module_loader.c
src/kernel/core/src/logging/: services.c  syscalls.c
src/kernel/core/src/pmem/: services.c
src/kernel/core/src/scheduler/: services.c
src/kernel/core/src/syscall/: services.c  syscalls.c
src/kernel/core/src/task/: services.c  syscalls.c
src/kernel/core/src/vmem/: region_services.c  services.c
src/kernel/core/test/: hello.elf  test_alloc.c  test_elfparser.c  test_loader_elfparser.c  test_memory.c  test_memory_management.c  test_task_management.c  test_task_services.c  test_vmem.c  test_vmem_services.c
src/kernel/hal/: CMakeLists.txt
src/kernel/hal/include/common/: multiboot2.h
src/kernel/hal/include/hal/: boot.h  configuration.h  console.h  debugger.h  hal.h  multiboot2.h  multiboot2_spec.h  native_logging.h  native_pagging.h  native_task.h  platform.h  tss.h
src/kernel/hal/include/x86_64/: debugger.h  gdt.h  hal.h  idt.h  intel.h  msr-index.h  native_pagging.h  native_task.h  platform.h  serial.h
src/kernel/hal/src/: multiboot.S  multiboot.c
src/kernel/hal/src/common/: multiboot2.c
src/kernel/hal/src/x86_64/: boot.S  boot.c  gdt.c  idt.S  idt.c  idt_fill.S  intel.c  linker.ld  multiboot2.S  native_logging.c  native_pagging.c  native_task.S  native_task.c  platform.c  serial.c
src/kernel/hal/src/x86_64/lib/: gdt.c  idt.S  idt.c
src/kernel/hal/test/: test_gdt.c  test_idt.c  test_native_memory.c  test_native_pagging.c
src/kernel/libc/: CMakeLists.txt
src/kernel/libc/src/: formatting.c  string.c
src/kernel/libc/test/: test_formatting.c
src/kernel/libutils/: CMakeLists.txt
src/kernel/libutils/include/: logging.h
src/kernel/libutils/include/algorithms/: bst.h  linkedlist.h  node.h
src/kernel/libutils/include/libutils/: id_mapper.h  iter.h  utils.h
src/kernel/libutils/src/: logging.c
src/kernel/libutils/src/algorithms/: bst.c  linkedlist.c  list.c  queue.c  stack.c
src/kernel/libutils/src/libutils/: id_mapper.c
src/kernel/libutils/test/: test_id_mapper.c  test_linkedlist.c  test_linkedlist_iter_action.c
src/kernel/tests/: CMakeLists.txt  kernel_mocks.c  kernel_test.h
src/libc/: kprintf.c  stdlib.c  string.c
src/libc/include/: stdlib.h  string.h
src/loader/javascript/include/javascript/: bubackos.h
src/modules/common/: CMakeListsModule.txt  module.ld
src/modules/console/: console.c
src/modules/hello/: CMakeLists.txt  crt0.S  hello.c  userspace_init.S
test/: run.py  template.cpp  test_page_allocator.cpp
tools/: build-binutils.sh  build-gcc.sh  build-jerryscript.sh  build-newlib.sh  crt0.S  (+5 more)
(+17 files in other folders)
